@@ -1,5 +1,5 @@
-/* Generated by re2c 0.9.4 on Fri Sep 24 23:45:23 2004 */
-#line 1 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
+/* Generated by re2c 0.5 on Thu Nov  4 01:10:35 2004 */
+#line 1 "/dat/dev/php/php-4.3dev/ext/standard/var_unserializer.re"
 /*
    +----------------------------------------------------------------------+
    | PHP Version 4                                                        |
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: var_unserializer.c,v 1.18.4.9 2004/09/24 21:57:18 helly Exp $ */
+/* $Id: var_unserializer.c,v 1.18.4.10 2004/11/15 13:40:31 derick Exp $ */
 
 #include "php.h"
 #include "ext/standard/php_var.h"
@@ -111,7 +111,7 @@ PHPAPI void var_destroy(php_unserialize_data_t *var_hashx)
 #define YYMARKER marker
 
 
-#line 118 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
+#line 118
 
 
 
@@ -296,8 +296,6 @@ PHPAPI int php_var_unserialize(UNSERIALIZE_PARAMETER)
 
 	
 	
-
-#line 7 "<stdout>"
 {
 	YYCTYPE yych;
 	unsigned int yyaccept;
@@ -375,7 +373,7 @@ yy0:
 				goto yy15;
 			} else {
 				if(yych <= '}')	goto yy13;
-				if(yych <= 0xBF)	goto yy15;
+				if(yych <= '\277')	goto yy15;
 				goto yy2;
 			}
 		}
@@ -389,9 +387,8 @@ yy3:	yyaccept = 0;
 	if(yych == ':')	goto yy80;
 	goto yy4;
 yy4:
-#line 511 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{ return 0; }
-#line 101 "<stdout>"
+#line 511
+	{ return 0; }
 yy5:	yych = *++YYCURSOR;
 	if(yych == ';')	goto yy78;
 	goto yy4;
@@ -423,16 +420,15 @@ yy12:	yyaccept = 0;
 	yych = *(YYMARKER = ++YYCURSOR);
 	if(yych == ':')	goto yy16;
 	goto yy4;
-yy13:	++YYCURSOR;
+yy13:	yych = *++YYCURSOR;
 	goto yy14;
 yy14:
-#line 505 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 505
+	{
 	/* this is the case where we have less data than planned */
 	php_error_docref(NULL TSRMLS_CC, E_NOTICE, "Unexpected end of serialized data");
 	return 0; /* not sure if it should be 0 or 1 here? */
 }
-#line 142 "<stdout>"
 yy15:	yych = *++YYCURSOR;
 	goto yy4;
 yy16:	yych = *++YYCURSOR;
@@ -452,11 +448,11 @@ yy19:	if(yybm[0+yych] & 128)	goto yy18;
 yy20:	yych = *++YYCURSOR;
 	if(yych != '"')	goto yy2;
 	goto yy21;
-yy21:	++YYCURSOR;
+yy21:	yych = *++YYCURSOR;
 	goto yy22;
 yy22:
-#line 424 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 424
+	{
 	size_t len, len2, maxlen;
 	int elements;
 	char *class_name;
@@ -536,7 +532,6 @@ yy22:
 
 	return object_common2(UNSERIALIZE_PASSTHRU, elements);
 }
-#line 247 "<stdout>"
 yy23:	yych = *++YYCURSOR;
 	if(yych <= ','){
 		if(yych != '+')	goto yy2;
@@ -562,18 +557,17 @@ yy26:	if(yych <= '/')	goto yy2;
 yy27:	yych = *++YYCURSOR;
 	if(yych != '"')	goto yy2;
 	goto yy28;
-yy28:	++YYCURSOR;
+yy28:	yych = *++YYCURSOR;
 	goto yy29;
 yy29:
-#line 416 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 416
+	{
 
 	INIT_PZVAL(*rval);
 	
 	return object_common2(UNSERIALIZE_PASSTHRU,
 			object_common1(UNSERIALIZE_PASSTHRU, ZEND_STANDARD_CLASS_DEF_PTR));
 }
-#line 285 "<stdout>"
 yy30:	yych = *++YYCURSOR;
 	if(yych == '+')	goto yy31;
 	if(yych <= '/')	goto yy2;
@@ -594,11 +588,11 @@ yy33:	if(yych <= '/')	goto yy2;
 yy34:	yych = *++YYCURSOR;
 	if(yych != '{')	goto yy2;
 	goto yy35;
-yy35:	++YYCURSOR;
+yy35:	yych = *++YYCURSOR;
 	goto yy36;
 yy36:
-#line 398 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 398
+	{
 	int elements = parse_iv(start + 2);
 
 	*p = YYCURSOR;
@@ -615,7 +609,6 @@ yy36:
 
 	return finish_nested_data(UNSERIALIZE_PASSTHRU);
 }
-#line 328 "<stdout>"
 yy37:	yych = *++YYCURSOR;
 	if(yych == '+')	goto yy38;
 	if(yych <= '/')	goto yy2;
@@ -636,11 +629,11 @@ yy40:	if(yych <= '/')	goto yy2;
 yy41:	yych = *++YYCURSOR;
 	if(yych != '"')	goto yy2;
 	goto yy42;
-yy42:	++YYCURSOR;
+yy42:	yych = *++YYCURSOR;
 	goto yy43;
 yy43:
-#line 370 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 370
+	{
 	size_t len, maxlen;
 	char *str;
 
@@ -667,7 +660,6 @@ yy43:
 	ZVAL_STRINGL(*rval, str, len, 1);
 	return 1;
 }
-#line 381 "<stdout>"
 yy44:	yych = *++YYCURSOR;
 	if(yych <= '/'){
 		if(yych <= ','){
@@ -753,17 +745,16 @@ yy53:	if(yych <= ';'){
 			goto yy2;
 		}
 	}
-yy54:	++YYCURSOR;
+yy54:	yych = *++YYCURSOR;
 	goto yy55;
 yy55:
-#line 363 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 363
+	{
 	*p = YYCURSOR;
 	INIT_PZVAL(*rval);
 	ZVAL_DOUBLE(*rval, atof(start + 2));
 	return 1;
 }
-#line 479 "<stdout>"
 yy56:	yych = *++YYCURSOR;
 	if(yych <= ','){
 		if(yych != '+')	goto yy2;
@@ -820,11 +811,11 @@ yy63:	yych = *++YYCURSOR;
 yy64:	yych = *++YYCURSOR;
 	if(yych != ';')	goto yy2;
 	goto yy65;
-yy65:	++YYCURSOR;
+yy65:	yych = *++YYCURSOR;
 	goto yy66;
 yy66:
-#line 346 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 346
+	{
 	*p = YYCURSOR;
 	INIT_PZVAL(*rval);
 #if defined(HAVE_ATOF_ACCEPTS_NAN) && defined(HAVE_ATOF_ACCEPTS_INF)
@@ -840,7 +831,6 @@ yy66:
 #endif
 	return 1;
 }
-#line 558 "<stdout>"
 yy67:	yych = *++YYCURSOR;
 	if(yych == 'N')	goto yy64;
 	goto yy2;
@@ -866,17 +856,16 @@ yy71:	if(yych <= '/')	goto yy2;
 	if(yych <= '9')	goto yy70;
 	if(yych != ';')	goto yy2;
 	goto yy72;
-yy72:	++YYCURSOR;
+yy72:	yych = *++YYCURSOR;
 	goto yy73;
 yy73:
-#line 339 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 339
+	{
 	*p = YYCURSOR;
 	INIT_PZVAL(*rval);
 	ZVAL_LONG(*rval, parse_iv(start + 2));
 	return 1;
 }
-#line 595 "<stdout>"
 yy74:	yych = *++YYCURSOR;
 	if(yych <= '/')	goto yy2;
 	if(yych >= '2')	goto yy2;
@@ -884,28 +873,26 @@ yy74:	yych = *++YYCURSOR;
 yy75:	yych = *++YYCURSOR;
 	if(yych != ';')	goto yy2;
 	goto yy76;
-yy76:	++YYCURSOR;
+yy76:	yych = *++YYCURSOR;
 	goto yy77;
 yy77:
-#line 332 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 332
+	{
 	*p = YYCURSOR;
 	INIT_PZVAL(*rval);
 	ZVAL_BOOL(*rval, parse_iv(start + 2));
 	return 1;
 }
-#line 613 "<stdout>"
-yy78:	++YYCURSOR;
+yy78:	yych = *++YYCURSOR;
 	goto yy79;
 yy79:
-#line 325 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 325
+	{
 	*p = YYCURSOR;
 	INIT_PZVAL(*rval);
 	ZVAL_NULL(*rval);
 	return 1;
 }
-#line 624 "<stdout>"
 yy80:	yych = *++YYCURSOR;
 	if(yych <= ','){
 		if(yych != '+')	goto yy2;
@@ -928,11 +915,11 @@ yy83:	if(yych <= '/')	goto yy2;
 	if(yych <= '9')	goto yy82;
 	if(yych != ';')	goto yy2;
 	goto yy84;
-yy84:	++YYCURSOR;
+yy84:	yych = *++YYCURSOR;
 	goto yy85;
 yy85:
-#line 304 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
-{
+#line 304
+	{
 	int id;
 
  	*p = YYCURSOR;
@@ -952,9 +939,8 @@ yy85:
 	
 	return 1;
 }
-#line 672 "<stdout>"
 }
-#line 513 "/usr/src/PHP_4_3_0/ext/standard/var_unserializer.re"
+#line 513
 
 
 	return 0;
